# neurograd

./: CMakeLists.txt  README.md  neurograd.cpp  neurograd.h  nn.h
tests/: CMakeLists.txt  test_neurograd.cpp
